--- a/src/CsvHelper.Excel.Specs/CsvHelper.Excel.Specs.csproj
+++ b/src/CsvHelper.Excel.Specs/CsvHelper.Excel.Specs.csproj
@@ -1,11 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>net46</TargetFrameworks>
+    <TargetFramework>net46</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="ClosedXML" Version="0.89.0" />
-    <PackageReference Include="CsvHelper" Version="2.16.3" />
-    <PackageReference Include="DocumentFormat.OpenXml" Version="2.7.2" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.5.0-preview-20170914-09" />
     <PackageReference Include="Microsoft.TestPlatform.ObjectModel" Version="15.5.0-preview-20170914-09" />
     <PackageReference Include="xunit" Version="2.3.0-beta5-build3769" />
