--- a/src/CsvHelper.Excel/CsvHelper.Excel.csproj
+++ b/src/CsvHelper.Excel/CsvHelper.Excel.csproj
@@ -4,7 +4,7 @@
     <AssemblyTitle>CsvHelper for Excel</AssemblyTitle>
     <VersionPrefix>1.0.7</VersionPrefix>
     <Authors>Chris Rodgers</Authors>
-    <TargetFrameworks>net40;net35;</TargetFrameworks>
+    <TargetFrameworks>net40;</TargetFrameworks>
     <DebugType>portable</DebugType>
     <AssemblyName>CsvHelper.Excel</AssemblyName>
     <OutputType>Library</OutputType>
@@ -13,20 +13,12 @@
     <PackageProjectUrl>https://github.com/christophano/CsvHelper.Excel</PackageProjectUrl>
     <PackageLicenseUrl>https://github.com/christophano/CsvHelper.Excel/blob/master/LICENSE</PackageLicenseUrl>
   </PropertyGroup>
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net40' ">
+  <ItemGroup>
     <Reference Include="System.Data" />
     <Reference Include="System" />
     <Reference Include="Microsoft.CSharp" />
     <PackageReference Include="ClosedXML" Version="0.94.2" />
     <PackageReference Include="DocumentFormat.OpenXml" Version="2.9.1" />
-  </ItemGroup>
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net35' ">
-    <Reference Include="System.Data" />
-    <Reference Include="System" />
-    <PackageReference Include="ClosedXML" Version="0.87.1" />
-    <PackageReference Include="DocumentFormat.OpenXml" Version="2.7.2" />
-  </ItemGroup>
-  <ItemGroup>
     <PackageReference Include="CsvHelper" Version="2.16.3" />
   </ItemGroup>
 </Project>
